samples/_failures_safe/1761186880_eb1662_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee626c0c.c: In function ‘handle_state_machine’:
./samples/SAFE/__tmp_ee626c0c.c:171:17: error: expected declaration or statement at end of input
  171 |                 case EVENT_RESET:
      |                 ^~~~
./samples/SAFE/__tmp_ee626c0c.c:171:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee626c0c.c:171:17: error: expected declaration or statement at end of input
